Changed articles picture and fixed some layout issues.

--- a/css/libraryStyle.css
+++ b/css/libraryStyle.css
@@ -177,6 +177,8 @@ nav ul {
     font-size: 14px;
     transition: 0.2s;
     text-align: center;
+    display: block;
+    width: 100%;
 }
 
 .dropdown-btn:hover {
